@@ -261,8 +261,9 @@ allow_es_magic_player: no
 //Miracle of the Sun, Moon and Stars skill ratio (100% = 10000)
 sg_miracle_skill_ratio: 1
 
-//Miracle of the Sun, Moon and Stars skill duration in milisecons
-sg_miracle_skill_duration: 3600000
+//Miracle of the Sun, Moon and Stars skill duration in miliseconds
+sg_miracle_skill_min_duration: 3600000
+sg_miracle_skill_max_duration: 9000000
 
 //Angel of the Sun, Moon and Stars skill ratio (100% = 10000)
 sg_angel_skill_ratio: 10
